# github-stats-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: main.yml
resources/configuration/: base.yaml
resources/graphql/: contribution_calendar.graphql  contribution_years.graphql  contributions_by_year.graphql  repos_overview.graphql
src/: main.rs
src/algebra/: github.rs  image_gen.rs  mod.rs
src/domain/: contributor_activity.rs  mod.rs  stats.rs  view.rs
src/domain/graphql/: query.rs
src/service/: github.rs  image_gen.rs  mod.rs
src/service/configuration/: mod.rs  telemetry.rs
