[package]
name = "github-stats-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"

[lib]
path = "src/lib.rs"

[[bin]]
name = "github-stats-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
confique = "0.3.0"
dotenvy = "0.15.7"
graphql_client = { version = "0.14.0", features = [
  "reqwest",
  "reqwest-blocking",
] }
regex = "1.11.1"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
] }
