[package]
name = "github-stats-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"

[lib]
path = "src/lib.rs"

[[bin]]
name = "github-stats-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
confique = { version = "0.4.0", features = ["yaml"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
graphql_client = { version = "0.16.0", features = [
  "reqwest",
  "reqwest-blocking",
] }
regex = "1.12.3"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "registry",
] }
